# Adversarial_Attacks_on_Code_Large_Language_Models_Using_Reinforcement_Learning

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RUNBOOK.txt  Testsinspect.py  demo.sh  humaneval_react.py  mbpp_attack.py  plot.py  requirements.txt  run_gitea.sh  run_mbpp.sh  run_plots_full.py  thesis_plots.py
V3/: AGENTS.md  adversarial_attack.py  prompt.md  pyproject.toml  run.sh  script_copy_past.sh  test_react.sh
V3/agent/: __init__.py  react_selector.py  selector_policy.py  tactic_registry.py
V3/attacks/: instruction_perturbation.py  misleading_comments.py  variable_renaming.py
V3/config/: attack_config.py
V3/docs/: CONFERENCE_BENCHMARK_NOTE.md  DATA_CONTRACT_ARQUITECTURE.md  MBPP_BENCHMARK_FLOW.md  RESULTS_AND_PLOTTING_CONTRACT.md
V3/gitea/: docker-compose.yml  schemas.py  tools.py
V3/judge/: llm_judge.py  red_teaming_tactics.py
V3/logs/: 2026-02-10T18-40-31+00-00_mbpp-attack_G7JXFbrAhiDz6GYNztGqS8.eval
V3/prompts/: tactic_generation.json
V3/scripts/: aggregate_and_plot.sh  clean_results.sh  log_entropy.py  run_adversarial_code_llm.sh  run_adversarial_gitea_react_attack.sh  run_full_experiment.sh  run_paper_experiments.sh  run_paper_experiments_resume.sh  run_policy_comparison.ps1  run_random.sh  run_react.sh  run_rl_eval.sh  run_rl_train.sh  store_results.sh  train_rl_overnight.sh  write_resume.py
V3/tasks/: mbpp_attack.py
V3/utils/: _check_repo.py  _test_commit.py  _upload_combined.py  bandit_weights.py  benchmark_loader.py  code_extraction.py  download_cubert_wbo.py  operator_mutation.py  pregenerate_buggy_code.py  (+6 more)
(+420 files in other folders)
