[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adversarial-code-llm"
version = "0.1.0"
description = "Adversarial attacks on Code LLMs using inspect_ai + LiteLLM"
requires-python = ">=3.10"

dependencies = [
    "inspect-ai>=0.1.0",
    "litellm>=1.3.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tree-sitter>=0.25.0",
    "tree-sitter-python>=0.23.0",
]

[tool.setuptools]
packages = ["V3"]

[tool.setuptools.package-dir]
"" = "."
